# event-sauce

./: Cargo.toml  README.md  build.sh  docker-compose.yml  generate-readmes.sh
.circleci/: config.yml
.github/: FUNDING.yml
event-sauce/: Cargo.toml  README.md  diesel.toml  docker-compose.yml  expand.rs
event-sauce-derive/: Cargo.toml  README.md
event-sauce-derive/src/: derive_struct.rs  lib.rs  ns.rs
event-sauce-derive/src/derives/: entity.rs  enum_event_data.rs  event_data.rs  mod.rs
event-sauce/examples/: README.md  hello-world.rs
event-sauce/examples/resources/: hello-world.drawio
event-sauce/migrations/2020-02-06-112836_create_events_table/: up.sql
event-sauce/src/: db_event.rs  event.rs  event_builder.rs  lib.rs  prelude.rs  schema.rs  schema.rs.patch  triggers.rs
event-sauce/src/event_builder/: action_event.rs  conflict_event.rs  create_event.rs  delete_event.rs  mod.rs  purge_event.rs  update_event.rs
event-sauce/tests/: action_builder.rs  conflict_check.rs  create.rs  db_event_to_event.rs  delete.rs  update.rs
src/: db_event.rs  event.rs  event_builder.rs  lib.rs
storage-sqlx/: Cargo.toml  README.md
storage-sqlx-pg/: Cargo.toml  create_expanded.rs
storage-sqlx-pg/src/: lib.rs
storage-sqlx-pg/tests/: crud.rs
storage-sqlx/src/: lib.rs
storage-sqlx/tests/: pg_crud.rs  pg_crud_derive.rs  purge.rs  transaction.rs
tests/: create.rs
