[package]
name = "event-sauce-derive"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
description = "The event sourcing paradigm for Rust"
documentation = "https://docs.rs/event-sauce-derive"
keywords = ["event-sourcing", "event", "sourcing"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
# https://crates.io/category_slugs
categories = [ "data-structures", "web-programming" ]

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "jamwaffles/event-sauce", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
