[package]
name = "event-sauce"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
description = "The event sourcing paradigm for Rust"
documentation = "https://docs.rs/event-sauce"
keywords = ["event-sourcing", "event", "sourcing"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
# https://crates.io/category_slugs
categories = [ "data-structures", "web-programming" ]

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "jamwaffles/event-sauce", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.46"
serde = "1.0.104"
log = "0.4.8"
serde_derive = "1.0.104"
r2d2 = "0.8.8"
r2d2_postgres = "0.16.0"
async-trait = "0.1.29"
sqlx = {optional = true, version = "0.3.2", features=["postgres", "uuid", "chrono", "macros", "json"]}

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.8.1"

[dev-dependencies.event-sauce-derive]
path = "../event-sauce-derive"
