[package]
name = "event-sauce-storage-sqlx-pg"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.3.2", features=["postgres", "uuid", "chrono", "macros"]}
event-sauce = "0.1.0"
async-trait = "0.1.29"
uuid = "0.8.1"

[dev-dependencies]
serde_derive = "1.0.105"
serde = "1.0.105"
serde_json = "1.0.50"
