[package]
name = "event-sauce-storage-sqlx"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "pg_crud"
required-features = [ "with-postgres" ]

[dependencies]
sqlx = {version = "0.3.2", features=["uuid", "chrono", "macros", "json"]}
event-sauce = { version = "0.1.0", features = [ "sqlx" ] }
async-trait = "0.1.29"
uuid = "0.8.1"
log = "0.4.8"

[dev-dependencies]
serde_derive = "1.0.105"
serde = "1.0.105"
serde_json = "1.0.50"

[dev-dependencies.async-std]
version = "1.5.0"
features = ["attributes"]

[dev-dependencies.event-sauce-derive]
version = "0.1.0"

[features]
default = ["with-postgres"]
with-postgres = ["sqlx/postgres"]
