[package]
name = "event-sauce-storage-sqlx"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "pg_crud"
required-features = [ "with-postgres" ]

[dependencies]
sqlx = { version = "0.5.1", features = ["uuid", "chrono", "macros", "json", "runtime-async-std-rustls"] }
event-sauce = { version = "0.1.0", path = "../event-sauce", features = [ "sqlx" ] }
async-trait = "0.1.48"
uuid = "0.8.2"
log = "0.4.14"

[dev-dependencies]
serde_derive = "1.0.124"
serde = "1.0.124"
serde_json = "1.0.64"

[dev-dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[dev-dependencies.event-sauce-derive]
path = "../event-sauce-derive"
version = "0.1.0"

[features]
default = ["with-postgres"]
with-postgres = ["sqlx/postgres"]
